# grok-register

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  config.example.json  config.simple.example.json  cpa_export.py  grok_register_ttk.py  mise.toml  nodes.example.json  nodes.example.txt  preflight-clash-nodes.sh  proxy_bridge.py  proxy_rotate.py  pyproject.toml  register.sh  register_cli.py  run-register-core.sh  run-register.sh  start-clash-for-grok.sh  tab_pool.py  test_browser_recycle_slot_retry.py  test_browser_reliability_fixes.py  test_chatgpt_error_kinds.py  test_chatgpt_protocol_steps.py  test_chatgpt_provider.py  test_cpa_chat_entitlement_gate.py  test_cpa_one_click_chain.py  test_cpa_pkce_mint.py  test_cpa_refresh_persist.py  test_cpa_remote_inject.py  test_email_providers_pool.py  test_env_config_overlay.py  test_fail_policy.py  test_gmail_imap_provider.py  test_hotmail_rest_code.py  (+14 more)
.github/workflows/: ci.yml
apps/: README.md
apps/cli/: README.md
apps/control_api/: __main__.py  app.py  auth.py  passwords.py  rate_limit.py  routes_auth.py  schemas.py  sessions.py  settings.py  users.py
apps/gui/: README.md
apps/web/: index.html
apps/web/assets/: app.css  app.js
apps/web/src/: App.jsx
cpa_xai/: __init__.py  accounts.py  browser_confirm.py  mint.py  pkce_mint.py  probe.py  protocol_mint.py  refresh.py  writer.py
docs/: ADDING_PROVIDER.md  DEVELOPED.md  IP-ISOLATION-QUALITY-DESIGN.md  LAYOUT.md
docs/superpowers/plans/: 2026-07-17-nodes-target-preflight.md  2026-07-21-web-control-plane.md
examples/: README.md  minimal_pipeline.py
mail_assets/: README.md
profiles/: chatgpt-tinyhost.example.yaml  grok-tinyhost.example.yaml  mimo-tinyhost.example.yaml
providers/: README.md
providers/_template/: .env.example  README.md  run-register.sh
providers/chatgpt/: .env.example  README.md  run-register.sh
providers/grok/: README.md
providers/mimo/: .env.example  README-PXED.md  README.md  inject_cpa_openai.py  package.json  run-register.sh  smoke.sh
register_core/: README.md  __init__.py  __main__.py  cli.py  contracts.py  errors.py  pipeline.py
register_core/config/: loader.py
register_core/decode/: extract.py
register_core/email/: __init__.py  base.py  composite.py  mail_proxy.py  registry.py
register_core/nodes/: README.md  __init__.py  catalog.py  cli.py  core_runtime.py  health.py  manager.py  models.py  targets.py
register_core/providers/: __init__.py  base.py  chatgpt_adapter.py  grok_adapter.py  mimo_adapter.py  registry.py
register_core/sink/: __init__.py  base.py  jsonl_sink.py  multi.py
register_core/strategy/: __init__.py  burn.py  engine.py
register_core/tools/: __init__.py  poll_otp.py
register_core/util/: __init__.py  egress.py  files.py  mail_inject.py  process.py  proxy.py  secrets.py
register_core/verify/: __init__.py  base.py  grok_chat.py  mimo_tts.py  noop.py  registry.py
scripts/: backfill_chat_stamps.py  backfill_cpa_xai_from_accounts.py  bootstrap_nodes_core.sh  build_web_console.sh  control_api_user.py  deploy_web_console10.sh  import_clash_to_nodes.py  import_cpa_auth_dir.py  import_nodes.py  launch_batch_supervisor.sh  probe_clash_nodes.py  quality_milestone_watch.py  quality_sample_accounts.py  remint_expired_and_sync_authdir.py  run_control_api.sh  setup_simple.sh  smoke_diskfirst_one.sh
tests/: conftest.py
tests/unit/: test_control_api_auth.py  test_control_api_login.py  test_gui_layout_helpers.py  test_skeleton_layout.py
(+40 files in other folders)
