[project]
name = "register-machine"
version = "1.3.0"
description = "Universal multi-provider register machine (Grok/xAI, Xiaomi MiMo, layered register_core)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
authors = [{ name = "dengyie" }]
keywords = ["register", "automation", "grok", "xai", "mimo", "oidc", "cpa"]
dependencies = [
    "DrissionPage>=4.1",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/dengyie/register-machine"
Repository = "https://github.com/dengyie/register-machine"
Issues = "https://github.com/dengyie/register-machine/issues"
Changelog = "https://github.com/dengyie/register-machine/blob/main/CHANGELOG.md"

# application mode: uv manages deps only, no wheel build
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
