[project]
name = "ai-register-machine"
version = "1.3.0"
description = "AI register machine: multi-provider hub, layered core, web control plane (Grok/xAI, MiMo, ChatGPT)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13,<3.14"
authors = [{ name = "dengyie" }]
keywords = ["ai-register", "register-machine", "automation", "grok", "xai", "mimo", "oidc", "cpa", "web"]
dependencies = [
    "DrissionPage>=4.1",
    "curl_cffi>=0.7",
    # Clash YAML convert (register_core.nodes.convert); CI uv sync must install it
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/dengyie/ai-register-machine"
Repository = "https://github.com/dengyie/ai-register-machine"
Issues = "https://github.com/dengyie/ai-register-machine/issues"
Changelog = "https://github.com/dengyie/ai-register-machine/blob/main/CHANGELOG.md"

# application mode: uv manages deps only, no wheel build
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]
